Improve a11y reporting and fix issue

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -22,8 +22,8 @@ header {
 			text-decoration: none;
 
 			&.active {
-				border-bottom: 2px solid #ea4549;
-				color: #ea4549;
+				border-bottom: 2px solid #bb373a;
+				color: #bb373a;
 			}
 		}
 	}
