Style nav links as active on focus and hover

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -21,7 +21,9 @@ header {
 				sans-serif;
 			text-decoration: none;
 
-			&.active {
+			&.active,
+			&:focus,
+			&:hover {
 				border-bottom: 2px solid #bb373a;
 				color: #bb373a;
 			}
