--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -10,23 +10,36 @@ header {
 		text-decoration: none;
 	}
 
-	nav > ul {
-		display: flex;
-		list-style-type: none;
+	nav {
+		width: 100%;
 
-		li > a {
-			color: inherit;
-			font:
-				700 18px "Raleway",
-				sans-serif;
-			text-decoration: none;
+		ul {
+			display: flex;
+			justify-content: flex-end;
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
 
-			&.active,
-			&:focus,
-			&:hover {
-				border-bottom: 2px solid #bb373a;
-				color: #bb373a;
+			li > a {
+				color: inherit;
+				font:
+					700 18px "Raleway",
+					sans-serif;
+				text-decoration: none;
+
+				&.active,
+				&:focus,
+				&:hover {
+					border-bottom: 2px solid #bb373a;
+					color: #bb373a;
+				}
 			}
 		}
+	}
+
+	@media (max-width: 600px) {
+		align-items: flex-start;
+		flex-direction: column;
+		padding-bottom: 16px;
 	}
 }
