--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -5,20 +5,33 @@ header {
 	justify-content: space-between;
 	padding: 0 16px;
 
-	h1 > a {
-		color: inherit;
-		text-decoration: none;
+	h1 {
+		margin-right: 32px;
+		a {
+			color: inherit;
+			text-decoration: none;
+		}
 	}
 
 	nav {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
 		width: 100%;
 
 		ul {
 			display: flex;
-			justify-content: flex-end;
 			list-style-type: none;
 			margin: 0;
 			padding: 0;
+
+			&:first-child {
+				justify-content: flex-start;
+			}
+
+			&:last-child {
+				justify-content: flex-end;
+			}
 
 			li > a {
 				color: inherit;
@@ -41,5 +54,9 @@ header {
 		align-items: flex-start;
 		flex-direction: column;
 		padding-bottom: 16px;
+
+		nav {
+			flex-direction: column;
+		}
 	}
 }
