Minor styling tweaks

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -45,6 +45,7 @@ header {
 				&:hover {
 					border-bottom: 2px solid #bb373a;
 					color: #bb373a;
+					padding-bottom: 0.125em;
 				}
 			}
 		}
