Slight styling improvements

--- a/client/src/pages/Account/Account.scss
+++ b/client/src/pages/Account/Account.scss
@@ -1,8 +1,8 @@
 button.secondary {
 	background-color: white;
-	border: 2px solid #bb373a;
+	border: 2px solid #bc2a2a;
 	border-radius: 5px;
-	color: #bb373a;
+	color: #bc2a2a;
 	cursor: pointer;
 	font:
 		400 16px "Lato",
@@ -10,11 +10,16 @@ button.secondary {
 	line-height: 28px;
 	padding: 0;
 
-	&:hover {
-		background-color: #faf3f3;
+	&:hover,
+	&:focus {
+		background-color: #f8e9e9;
 	}
 
 	&:active {
-		background-color: #f2dbdb;
+		background-color: #f1d4d4;
 	}
+}
+
+form[action="/api/auth/logout"] {
+	flex-direction: row;
 }
