--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,7 +2,7 @@ main > section {
 	padding: 32px;
 
 	h2 {
-		border-bottom: 2px solid #ea4549;
+		border-bottom: 2px solid #d12f2f;
 		display: inline-block;
 		padding-bottom: 0.125em;
 	}
