--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -59,8 +59,8 @@ header {
 				&.active,
 				&:focus,
 				&:hover {
-					border-bottom: 2px solid #bb373a;
-					color: #bb373a;
+					border-bottom: 2px solid #bc2a2a;
+					color: #bc2a2a;
 					padding-bottom: 0.125em;
 				}
 			}
