--- a/client/src/components/SuggestResource/SuggestResource.scss
+++ b/client/src/components/SuggestResource/SuggestResource.scss
@@ -16,13 +16,38 @@ form {
 		width: 25%;
 	}
 
+	button.primary {
+		background-color: #bc2a2a;
+		border-radius: 5px;
+		border: 2px solid #bc2a2a;
+		color: white;
+		cursor: pointer;
+		font:
+			400 16px "Lato",
+			sans-serif;
+		line-height: 28px;
+		padding: 0;
+
+		&:hover,
+		&:focus {
+			background-color: #a92525;
+			border-color: #a92525;
+		}
+
+		&:active {
+			background-color: #962121;
+			border-color: #962121;
+		}
+	}
+
 	label {
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
 		width: 100%;
 
-		input {
+		input,
+		textarea {
 			width: 75%;
 		}
 	}
