Reject duplicate resources with useful feedback

--- a/client/src/pages/Suggest/Suggest.scss
+++ b/client/src/pages/Suggest/Suggest.scss
@@ -53,9 +53,17 @@ form {
 	}
 }
 
-p.success {
-	background-color: palegreen;
-	color: darkgreen;
+p.message {
 	font-weight: bold;
 	padding: 8px;
+
+	&.success {
+		background-color: palegreen;
+		color: darkgreen;
+	}
+
+	&.failure {
+		background-color: lightcoral;
+		color: darkred;
+	}
 }
