--- a/client/src/pages/Account/Account.scss
+++ b/client/src/pages/Account/Account.scss
@@ -1,25 +1,3 @@
-button.secondary {
-	background-color: white;
-	border: 2px solid #bc2a2a;
-	border-radius: 5px;
-	color: #bc2a2a;
-	cursor: pointer;
-	font:
-		400 16px "Lato",
-		sans-serif;
-	line-height: 28px;
-	padding: 0;
-
-	&:hover,
-	&:focus {
-		background-color: #f8e9e9;
-	}
-
-	&:active {
-		background-color: #f1d4d4;
-	}
-}
-
 form[action="/api/auth/logout"] {
-	flex-direction: row;
+	margin-top: 24px;
 }
