--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -14,4 +14,17 @@ body {
 		font-family: "Raleway", sans-serif;
 		font-weight: 700;
 	}
+
+	.visuallyhidden {
+		position: absolute;
+
+		width: 1px;
+		height: 1px;
+		margin: -1px;
+		border: 0;
+		padding: 0;
+
+		clip: rect(0 0 0 0);
+		overflow: hidden;
+	}
 }
