Nicer mobile pagination layout

--- a/client/src/components/Pagination/Pagination.scss
+++ b/client/src/components/Pagination/Pagination.scss
@@ -74,4 +74,13 @@ nav[aria-label="pagination"] {
 			padding: 8px;
 		}
 	}
+
+	@media (max-width: 480px) {
+		flex-direction: column;
+
+		& > label,
+		& > ul {
+			margin: 8px 0;
+		}
+	}
 }
