--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,8 +1,10 @@
+@import "./styles/palette";
+
 main > section {
 	padding: 32px;
 
 	h2 {
-		border-bottom: 2px solid #d12f2f;
+		border-bottom: $red;
 		display: inline-block;
 		padding-bottom: 0.125em;
 	}
