--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -1,3 +1,6 @@
+@use "sass:color";
+@import "../../styles/palette";
+
 button.button {
 	border-radius: 5px;
 	cursor: pointer;
@@ -9,34 +12,34 @@ button.button {
 	min-width: 150px;
 
 	&.primary {
-		background-color: #2a2abc;
-		border: 2px solid #2a2abc;
+		background-color: $blue;
+		border: 2px solid $blue;
 		color: white;
 
 		&:hover,
 		&:focus {
-			background-color: #2525a9;
-			border-color: #212196;
+			background-color: color.scale($blue, $lightness: -10%);
+			border-color: color.scale($blue, $lightness: -10%);
 		}
 
 		&:active {
-			background-color: #263fcb;
-			border-color: #263fcb;
+			background-color: color.scale($blue, $lightness: -20%);
+			border-color: color.scale($blue, $lightness: -20%);
 		}
 	}
 
 	&.secondary {
 		background-color: white;
-		border: 2px solid #2a2abc;
-		color: #2a2abc;
+		border: 2px solid $blue;
+		color: $blue;
 
 		&:hover,
 		&:focus {
-			background-color: #e9e9f8;
+			background-color: color.change($blue, $lightness: 95%);
 		}
 
 		&:active {
-			background-color: #d4d4f1;
+			background-color: color.change($blue, $lightness: 90%);
 		}
 	}
 }
