--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,11 +1,12 @@
+@import "./styles/layout";
 @import "./styles/palette";
 
 main > section {
-	padding: 32px;
+	padding: calc($baseline * 8);
 
 	h2 {
 		border-bottom: $red;
 		display: inline-block;
-		padding-bottom: 0.125em;
+		padding-bottom: $baseline;
 	}
 }
