--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,3 +1,4 @@
+@import "../../styles/layout";
 @import "../../styles/palette";
 
 header {
@@ -5,10 +6,10 @@ header {
 	background-color: $ultralight-grey;
 	display: flex;
 	justify-content: space-between;
-	padding: 0 32px;
+	padding: 0 calc($baseline * 8);
 
 	h1 {
-		margin-right: 32px;
+		margin-right: calc($baseline * 8);
 
 		a {
 			align-items: center;
@@ -17,8 +18,8 @@ header {
 			text-decoration: none;
 
 			img {
-				height: 35px;
-				margin-right: 4px;
+				height: calc($baseline * 8);
+				margin-right: $baseline;
 			}
 		}
 	}
@@ -39,7 +40,7 @@ header {
 				justify-content: flex-start;
 
 				li:not(:last-of-type) {
-					padding-right: 16px;
+					padding-right: calc($baseline * 4);
 				}
 			}
 
@@ -47,7 +48,7 @@ header {
 				justify-content: flex-end;
 
 				li:not(:first-of-type) {
-					padding-left: 16px;
+					padding-left: calc($baseline * 4);
 				}
 			}
 
@@ -63,22 +64,22 @@ header {
 				&:hover {
 					border-bottom: 2px solid $red;
 					color: $red;
-					padding-bottom: 0.125em;
+					padding-bottom: $baseline;
 				}
 			}
 		}
 	}
 
-	@media (max-width: 720px) {
+	@media (max-width: $tablet) {
 		align-items: flex-start;
 		flex-direction: column;
 
 		nav ul {
-			padding-bottom: 16px;
+			padding-bottom: calc($baseline * 4);
 		}
 	}
 
-	@media (max-width: 480px) {
+	@media (max-width: $mobile) {
 		nav {
 			flex-direction: column;
 		}
