--- a/client/src/components/Pagination/Pagination.scss
+++ b/client/src/components/Pagination/Pagination.scss
@@ -1,4 +1,5 @@
 @use "sass:color";
+@import "../../styles/layout";
 @import "../../styles/palette";
 
 nav[aria-label="pagination"] {
@@ -31,9 +32,9 @@ nav[aria-label="pagination"] {
 			> * {
 				border-width: 2px;
 				border-style: solid;
-				border-radius: 5px;
-				margin: 8px;
-				padding: 4px 8px;
+				border-radius: $border-radius;
+				margin: calc($baseline * 2);
+				padding: $baseline calc($baseline * 2);
 			}
 
 			> span {
@@ -79,29 +80,29 @@ nav[aria-label="pagination"] {
 		align-items: center;
 		display: flex;
 		flex-direction: row;
-		margin-left: 16px;
+		margin-left: calc($baseline * 4);
 		text-align: end;
 
 		& > select {
 			background-color: white;
 			border: 1px solid $light-grey;
-			border-radius: 5px;
+			border-radius: $border-radius;
 			box-sizing: border-box;
 			font:
 				400 16px "Lato",
 				sans-serif;
-			margin-left: 8px;
-			padding: 8px;
+			margin-left: calc($baseline * 2);
+			padding: calc($baseline * 2);
 			width: fit-content;
 		}
 	}
 
-	@media (max-width: 720px) {
+	@media (max-width: $tablet) {
 		flex-direction: column;
 
 		label {
 			margin-left: 0;
-			margin-top: 8px;
+			margin-top: calc($baseline * 2);
 		}
 	}
 }
