--- a/client/src/pages/Suggest/Suggest.scss
+++ b/client/src/pages/Suggest/Suggest.scss
@@ -1,11 +1,12 @@
 @use "sass:color";
+@import "../../styles/layout";
 @import "../../styles/palette";
 
 p.message {
-	border-radius: 5px;
+	border-radius: $border-radius;
 	font-weight: 700;
-	margin: 16px 0;
-	padding: 16px;
+	margin: calc($baseline * 4) 0;
+	padding: calc($baseline * 4);
 
 	&.success {
 		background-color: color.change($green, $lightness: 95%);
