--- a/client/src/components/Pagination/Pagination.scss
+++ b/client/src/components/Pagination/Pagination.scss
@@ -1,6 +1,7 @@
 @use "sass:color";
 @import "../../styles/layout";
 @import "../../styles/palette";
+@import "../../styles/typography";
 
 nav[aria-label="pagination"] {
 	align-items: center;
@@ -88,9 +89,7 @@ nav[aria-label="pagination"] {
 			border: 1px solid $light-grey;
 			border-radius: $border-radius;
 			box-sizing: border-box;
-			font:
-				400 16px "Lato",
-				sans-serif;
+			font: $body-text;
 			margin-left: calc($baseline * 2);
 			padding: calc($baseline * 2);
 			width: fit-content;
