--- a/client/src/components/ResourceList/ResourceList.scss
+++ b/client/src/components/ResourceList/ResourceList.scss
@@ -19,8 +19,8 @@ ul.resource-list {
 		border-radius: $border-radius;
 		display: flex;
 		flex-direction: column;
-		padding: calc($baseline * 4);
-		margin: calc($baseline * 4) 0;
+		padding: calc($baseline * 2);
+		margin: calc($baseline * 2) 0;
 
 		&.no-resources {
 			border-color: $mid-grey;
@@ -29,14 +29,14 @@ ul.resource-list {
 
 		h3 {
 			display: inline-block;
-			font-size: calc($baseline * 4);
+			font-size: calc($baseline * 2);
 		}
 
 		& > * {
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
-			margin-bottom: calc($baseline * 4);
+			margin-bottom: calc($baseline * 2);
 
 			&:last-child {
 				margin-bottom: 0;
@@ -51,7 +51,7 @@ ul.resource-list {
 		color: $blue;
 		cursor: pointer;
 		font: $body-text-weight calc($body-text-size * 0.875) $body-text-family;
-		margin-left: calc($baseline * 2);
+		margin-left: $baseline;
 
 		&:hover,
 		&:focus {
