--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -1,4 +1,3 @@
-@use "sass:color";
 @import "../../styles/layout";
 @import "../../styles/palette";
 @import "../../styles/typography";
@@ -18,13 +17,13 @@ button.button {
 
 		&:hover,
 		&:focus {
-			background-color: color.scale($blue, $lightness: -10%);
-			border-color: color.scale($blue, $lightness: -10%);
+			background-color: hover-dark($blue);
+			border-color: hover-dark($blue);
 		}
 
 		&:active {
-			background-color: color.scale($blue, $lightness: -20%);
-			border-color: color.scale($blue, $lightness: -20%);
+			background-color: active-dark($blue);
+			border-color: active-dark($blue);
 		}
 	}
 
@@ -35,11 +34,11 @@ button.button {
 
 		&:hover,
 		&:focus {
-			background-color: color.change($blue, $lightness: 95%);
+			background-color: hover-light($blue);
 		}
 
 		&:active {
-			background-color: color.change($blue, $lightness: 90%);
+			background-color: active-light($blue);
 		}
 	}
 }
