--- a/client/src/components/Pagination/Pagination.scss
+++ b/client/src/components/Pagination/Pagination.scss
@@ -1,4 +1,3 @@
-@use "sass:color";
 @import "../../styles/layout";
 @import "../../styles/palette";
 @import "../../styles/typography";
@@ -49,11 +48,11 @@ nav[aria-label="pagination"] {
 
 				&:hover,
 				&:focus {
-					background-color: color.change($green, $lightness: 95%);
+					background-color: hover-light($green);
 				}
 
 				&:active {
-					background-color: color.change($green, $lightness: 90%);
+					background-color: active-light($green);
 				}
 
 				&.active {
@@ -62,13 +61,13 @@ nav[aria-label="pagination"] {
 
 					&:hover,
 					&:focus {
-						background-color: color.scale($green, $lightness: -10%);
-						border-color: color.scale($green, $lightness: -10%);
+						background-color: hover-dark($green);
+						border-color: hover-dark($green);
 					}
 
 					&:active {
-						background-color: color.scale($green, $lightness: -20%);
-						border-color: color.scale($green, $lightness: -20%);
+						background-color: active-dark($green);
+						border-color: active-dark($green);
 					}
 				}
 			}
