--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -1,6 +1,6 @@
-@import "../../styles/layout";
-@import "../../styles/palette";
-@import "../../styles/typography";
+@use "../../styles/layout";
+@use "../../styles/palette";
+@use "../../styles/typography";
 
 form.form {
 	align-items: flex-end;
@@ -8,11 +8,11 @@ form.form {
 	flex-direction: column;
 
 	> * {
-		margin-top: calc($baseline * 2);
+		margin-top: calc(#{layout.$baseline} * 2);
 		width: 100%;
 
 		&:last-child {
-			margin-bottom: calc($baseline * 2);
+			margin-bottom: calc(#{layout.$baseline} * 2);
 		}
 	}
 
@@ -22,7 +22,7 @@ form.form {
 		justify-content: flex-end;
 
 		button:not(:first-child) {
-			margin-left: calc($baseline * 2);
+			margin-left: calc(#{layout.$baseline} * 2);
 		}
 	}
 
@@ -36,21 +36,21 @@ form.form {
 		select,
 		textarea {
 			background-color: white;
-			border: 1px solid $light-grey;
-			border-radius: $border-radius;
+			border: 1px solid palette.$light-grey;
+			border-radius: layout.$border-radius;
 			box-sizing: border-box;
-			font: $body-text;
-			margin-left: calc($baseline * 2);
-			padding: $baseline;
+			font: typography.$body-text;
+			margin-left: calc(#{layout.$baseline} * 2);
+			padding: layout.$baseline;
 			width: 75%;
 
 			&:invalid {
-				border-color: $red;
+				border-color: palette.$red;
 			}
 		}
 	}
 
-	@media (max-width: $mobile) {
+	@media (max-width: layout.$mobile) {
 		div.buttons {
 			justify-content: space-between;
 		}
@@ -63,7 +63,7 @@ form.form {
 			select,
 			textarea {
 				width: 100%;
-				margin: $baseline 0;
+				margin: layout.$baseline 0;
 			}
 		}
 	}
