--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,16 +1,16 @@
-@import "../../styles/layout";
-@import "../../styles/palette";
-@import "../../styles/typography";
+@use "../../styles/layout";
+@use "../../styles/palette";
+@use "../../styles/typography";
 
 header {
 	align-items: center;
-	background-color: $ultralight-grey;
+	background-color: palette.$ultralight-grey;
 	display: flex;
 	justify-content: space-between;
-	padding: 0 calc($baseline * 4);
+	padding: 0 calc(#{layout.$baseline} * 4);
 
 	h1 {
-		margin-right: calc($baseline * 4);
+		margin-right: calc(#{layout.$baseline} * 4);
 
 		a {
 			align-items: center;
@@ -19,8 +19,8 @@ header {
 			text-decoration: none;
 
 			img {
-				height: calc($baseline * 4);
-				margin-right: calc($baseline / 2);
+				height: calc(#{layout.$baseline} * 4);
+				margin-right: calc(#{layout.$baseline} / 2);
 			}
 		}
 	}
@@ -41,7 +41,7 @@ header {
 				justify-content: flex-start;
 
 				li:not(:last-of-type) {
-					padding-right: calc($baseline * 2);
+					padding-right: calc(#{layout.$baseline} * 2);
 				}
 			}
 
@@ -49,37 +49,38 @@ header {
 				justify-content: flex-end;
 
 				li:not(:first-of-type) {
-					padding-left: calc($baseline * 2);
+					padding-left: calc(#{layout.$baseline} * 2);
 				}
 			}
 
 			li > a {
 				color: inherit;
-				font: $heading-text-weight calc($body-text-size * 1.125)
-					$heading-text-family;
-				padding-bottom: calc($baseline / 2);
+				font: typography.$heading-text-weight
+					calc(#{typography.$body-text-size} * 1.125)
+					typography.$heading-text-family;
+				padding-bottom: calc(#{layout.$baseline} / 2);
 				text-decoration: none;
 
 				&.active,
 				&:focus,
 				&:hover {
-					border-bottom: 2px solid $red;
-					color: $red;
+					border-bottom: 2px solid palette.$red;
+					color: palette.$red;
 				}
 			}
 		}
 	}
 
-	@media (max-width: $tablet) {
+	@media (max-width: layout.$tablet) {
 		align-items: flex-start;
 		flex-direction: column;
 
 		nav ul {
-			padding-bottom: calc($baseline * 2);
+			padding-bottom: calc(#{layout.$baseline} * 2);
 		}
 	}
 
-	@media (max-width: $mobile) {
+	@media (max-width: layout.$mobile) {
 		nav {
 			flex-direction: column;
 		}
