--- a/client/src/components/ResourceList/ResourceList.scss
+++ b/client/src/components/ResourceList/ResourceList.scss
@@ -1,6 +1,6 @@
-@import "../../styles/layout";
-@import "../../styles/palette";
-@import "../../styles/typography";
+@use "../../styles/layout";
+@use "../../styles/palette";
+@use "../../styles/typography";
 
 ul.resource-list {
 	list-style-type: none;
@@ -12,28 +12,28 @@ ul.resource-list {
 	}
 
 	li {
-		border: 1px solid $dark-grey;
-		border-radius: $border-radius;
+		border: 1px solid palette.$dark-grey;
+		border-radius: layout.$border-radius;
 		display: flex;
 		flex-direction: column;
-		padding: calc($baseline * 2);
-		margin: calc($baseline * 2) 0;
+		padding: calc(#{layout.$baseline} * 2);
+		margin: calc(#{layout.$baseline} * 2) 0;
 
 		&.no-resources {
-			border-color: $mid-grey;
-			color: $mid-grey;
+			border-color: palette.$mid-grey;
+			color: palette.$mid-grey;
 		}
 
 		h3 {
 			display: inline-block;
-			font-size: calc($baseline * 2);
+			font-size: calc(#{layout.$baseline} * 2);
 		}
 
 		& > * {
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
-			margin-bottom: calc($baseline * 2);
+			margin-bottom: calc(#{layout.$baseline} * 2);
 
 			&:last-child {
 				margin-bottom: 0;
@@ -43,20 +43,21 @@ ul.resource-list {
 
 	button {
 		background-color: white;
-		border: 2px solid $blue;
-		border-radius: $border-radius;
-		color: $blue;
+		border: 2px solid palette.$blue;
+		border-radius: layout.$border-radius;
+		color: palette.$blue;
 		cursor: pointer;
-		font: $body-text-weight calc($body-text-size * 0.875) $body-text-family;
-		margin-left: $baseline;
+		font: typography.$body-text-weight
+			calc(#{typography.$body-text-size} * 0.875) typography.$body-text-family;
+		margin-left: layout.$baseline;
 
 		&:hover,
 		&:focus {
-			background-color: hover-light($blue);
+			background-color: palette.hover-light(palette.$blue);
 		}
 
 		&:active {
-			background-color: active-light($blue);
+			background-color: palette.active-light(palette.$blue);
 		}
 	}
 }
