added line break to resource description that is retained when renders on page

--- a/client/src/components/ResourceList/ResourceList.scss
+++ b/client/src/components/ResourceList/ResourceList.scss
@@ -60,4 +60,8 @@ ul.resource-list {
 			background-color: palette.active-light(palette.$blue);
 		}
 	}
+	.resource-description {
+		white-space: pre-line;
+		word-break: break-word;
+	}
 }
